Add basic dash app
Add basic testing dash app to the project. We are probably gonna use
dash apps for visualitations for different purposes. Just making small
commit which show what needs to be included when doing this. I use
installation tutorial for this [1].

[1]: https://django-plotly-dash.readthedocs.io/en/latest/installation.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,4 +8,7 @@ SPDX-License-Identifier: GPL-2.0-only
 
 {% block content %}
   <p>This is home page template</p>
+
+  {% load plotly_dash %}
+  {% plotly_app name="test" %}
 {% endblock %}
