Hide SPDX identifier from html templates
We need to use Django html Template comments so these will not show up
in final html output.

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,5 @@
-<!--
-SPDX-FileCopyrightText: 2022 Kari Argillander
-
-SPDX-License-Identifier: GPL-2.0-only
--->
+{# SPDX-FileCopyrightText: 2022 Kari Argillander #}
+{# SPDX-License-Identifier: GPL-2.0-only #}
 
 {% extends 'base.html' %}
 
@@ -10,5 +7,5 @@ SPDX-License-Identifier: GPL-2.0-only
   <p>This is home page template</p>
 
   {% load plotly_dash %}
-  {% plotly_app name="test" %}
+  {% plotly_app name="test" ratio=1 %}
 {% endblock %}
