--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,4 @@
-<!--
-SPDX-FileCopyrightText: 2022 Kari Argillander
-
-SPDX-License-Identifier: GPL-2.0-only
--->
+{# SPDX-FileCopyrightText: 2022 Kari Argillander #}
+{# SPDX-License-Identifier: GPL-2.0-only #}
 
 <p>Navbar template</p1>
